--- a/app/assets/styles/modules/_page-section.css
+++ b/app/assets/styles/modules/_page-section.css
@@ -12,3 +12,27 @@
 	background-color: $mainBlue; 
 	color: #fff;
 }
+
+.page-section--testimonials {
+	background: #e0e6ef;
+	@mixin atLarge {
+		background: url('/assets/images/testimonials-bg.jpg') top center no-repeat;
+		background-size: cover;
+	}
+}
+
+.page-section--no-b-padding-until-medium {
+	padding-bottom: 0;
+
+	@mixin atMedium {
+		padding-bottom: 4.5rem;
+	}
+}
+
+.page-section--no-b-padding-until-large {
+	padding-bottom: 0;
+
+	@mixin atLarge {
+		padding-bottom: 4.5rem;
+	}
+}
