--- a/app/assets/styles/modules/_row.css
+++ b/app/assets/styles/modules/_row.css
@@ -39,6 +39,37 @@
 .row__medium-8--smaller {
 	width: 63%;
 }
+--
+
+@mixin atLarge {
+
+	.row__b-margin-until-large {
+		margin-bottom: 0;
+	}
+
+	.row__large-4 {
+		float: left;
+		width: 33.33%;
+}
+
+	.row__large-6 {
+		float: left;
+		width: 50%;
+	}
+
+	.row__large-8 {
+		float: left;
+		width: 66.66%;
+}
+}
+
+.row__large-8--larger {
+	width: 37%;
+}
+
+.row__large-8--smaller {
+	width: 63%;
+}
 
 
 .row--gutters {
@@ -57,4 +88,36 @@
 	padding-right: 100px;
 }
 
+.row--gutters-small {
+	margin-right: -45px;
+}
 
+.row--gutters-small > div {
+	padding-right: 45px;
+}
+.row--t-padding {
+	padding-top: 80px;
+}
+
+/* Begin Equal Height Rules */
+.row--equal-height-at-medium {
+	@mixin atMedium {
+		display: flex;
+	}
+}
+
+.row--equal-height-at-medium > div {
+		float: none;
+		display: flex;
+	}
+
+	.row--equal-height-at-large {
+	@mixin atLarge {
+		display: flex;
+	}
+}
+
+.row--equal-height-at-large > div {
+		float: none;
+		display: flex;
+	}
