--- a/app/assets/styles/modules/_wrapper.css
+++ b/app/assets/styles/modules/_wrapper.css
@@ -24,3 +24,23 @@
 	}
 	
 }
+
+.wrapper--no-padding-until-medium {
+	padding-left: 0;
+	padding-right: 0;
+
+	@mixin atMedium {
+		padding-left: 18px;
+		padding-right: 18px;
+	}
+}
+
+.wrapper--no-padding-until-large {
+	padding-left: 0;
+	padding-right: 0;
+
+	@mixin atLarge {
+		padding-left: 18px;
+		padding-right: 18px;
+	}
+}
