--- a/app/assets/styles/modules/_page-section.css
+++ b/app/assets/styles/modules/_page-section.css
@@ -16,8 +16,10 @@
 .page-section--testimonials {
 	background: #e0e6ef;
 	@mixin atLarge {
-		background: url('/assets/images/testimonials-bg.jpg') top center no-repeat;
-		background-size: cover;
+		&.lazyloaded {
+			background: url('/assets/images/testimonials-bg.jpg') top center no-repeat;
+			background-size: cover;
+		}
 	}
 }
 
